<resources>
    <string name="app_name">Enterprise Expense Tracker</string>

    <!--    login-->
    <string name="txt_hint_email">Email Id</string>
    <string name="txt_login">Login</string>
    <string name="txt_password">Password</string>
    <string name="enter_login_info">Please Enter Valid Login Details</string>
    <string name="forgot_pwd">Forgot Password"</string>
    <string name="failed_login">Login failed! Please try again.</string>
    <string name="txt_login_progress">Login In Progress</string>
    <string name="txt_logout_done">You are logged out</string>

    <!--    Forgot Password-->
    <string name="txt_forgot_pwd_otp_msg">Please submit your email and we will send you unique code to reset your password.</string>
    <string name="txt_otp_received_msg">Please enter unique OTP you received in your email to reset your password.</string>
    <string name="txt_hint_otp">Enter OTP</string>
    <string name="txt_generate_otp_msg">Sending email with OTP</string>
    <string name="txt_submit_otp_msg">Verifying OTP</string>

    <!--    TTS-->
    <string name="tts_init_failed">TTS initialization failed!</string>
    <string name="tts_permission_denied">Audio recording permission is required in order to user Voice Chatbot</string>

    <!--    Chart-->
    <string name="chart_dataset_label">Expense \nReimbursed</string>
    <string name="txt_upload"> Upload Receipt</string>

    <!--    add expense-->
    <string name="txt_click_pic">Click Photo</string>
    <string name="txt_select_photos">Choose from Photos</string>
    <string name="txt_failed_image_path">Image path is null or blank !</string>
    <string name="txt_upload_progress">Uploading Receipt Image</string>
    <string name="txt_submit_report_progress">Submitting Expense Report</string>
    <string name="txt_select_img_dialog_title">Choose Photo</string>
    <string name="txt_empty_chatbot">Hi, how may I help you?</string>

    <!-- common-->
    <string name="txt_loading">Loading</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_api_failed">API call failed!</string>
    <string name="txt_currency_dollar_amount">$%1$.2f</string>
    <string name="txt_delete_tooltip">Delete Report</string>
    <string name="txt_view_receipt">View Receipt</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_error_invalid_email">Invalid emailId</string>

    <!--    Dashboard-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="txt_confirm_dialog_title">Confirm</string>
    <string name="txt_confirm_delete"> Do you really want to delete this expense report?</string>
    <string name="txt_delete_progress">Deleting Expense Report</string>

    <!--    Change Password-->
    <string name="txt_old_pwd">Old Password</string>
    <string name="txt_new_pwd">New Password</string>
    <string name="txt_confirm_new_pwd">Confirm New Password</string>
    <string name="txt_error_confirm_pwd">Password doesn\'t match</string>

    <!--    Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_add_expense">Add Expense</string>
    <string name="menu_report_history">Reports</string>
    <string name="menu_change_pwd">Change Password</string>
    <string name="menu_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_notification">Notifications</string>

    <!--    Notification-->
    <string name="status_notification_channel_id">1111</string>
    <string name="status_notification_channel_name">Expense Report Status Update</string>
    <string name="txt_status_update">Expense Report Status Update</string>
    <string name="txt_empty_notification">No notifications yet.</string>
    <string name="txt_fetching_report">Getting expense report details</string>

    <!--    All reports-->
    <string name="txt_from_date">Select from Date</string>
    <string name="txt_to_date">Select to Date</string>
    <string name="txt_error_empty_date">Please select date</string>
    <string name="txt_error_small_from_date">From date should be smaller than to date</string>
    <string name="txt_empty_reports">No expense reports yet.</string>
    <string name="txt_empty_reports_date_filter">No expense exports available between given dates.</string>

    <!--    Report detail-->
    <string name="txt_report_detail">Expense Report Detail</string>
    <string name="txt_no_comment"> No Comments yet</string>
    <string name="txt_comment">Comments: \n\n%1$s</string>
</resources>
