<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/upper"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_add_expense"
            android:icon="@drawable/ic_menu_add_expense"
            android:title="@string/menu_add_expense" />
        <item
            android:id="@+id/nav_track_status"
            android:icon="@drawable/ic_menu_track_status"
            android:title="@string/menu_track_status" />
    </group>

    <group
        android:id="@+id/lower"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_change_pwd"
            android:icon="@drawable/ic_menu_change_pwd"
            android:title="@string/menu_change_pwd" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
