<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.avengers.enterpriseexpensetracker.ui.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_report_detail"
            app:destination="@id/nav_report_detail"
            app:enterAnim="@android:anim/slide_in_left" />
        <action
            android:id="@+id/action_nav_home_to_notificationFragment"
            app:destination="@id/nav_notification" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_expense"
        android:name="com.avengers.enterpriseexpensetracker.ui.fragment.AddExpenseFragment"
        android:label="@string/menu_add_expense"
        tools:layout="@layout/fragment_add_expense" />
    <fragment
        android:id="@+id/nav_report_history"
        android:name="com.avengers.enterpriseexpensetracker.ui.fragment.AllReportsFragment"
        android:label="@string/menu_report_history"
        tools:layout="@layout/fragment_all_reports">
        <action
            android:id="@+id/action_nav_report_history_to_nav_report_detail"
            app:destination="@id/nav_report_detail"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.avengers.enterpriseexpensetracker.ui.fragment.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_report_detail"
        android:name="com.avengers.enterpriseexpensetracker.ui.fragment.ReportDetailFragment"
        android:label="@string/txt_report_detail"
        tools:layout="@layout/fragment_report_detail">
        <argument
            android:name="report"
            app:argType="com.avengers.enterpriseexpensetracker.modal.ExpenseReport" />
    </fragment>
    <fragment
        android:id="@+id/nav_change_pwd"
        android:name="com.avengers.enterpriseexpensetracker.ui.fragment.ChangePasswordFragment"
        android:label="@string/menu_change_pwd"
        tools:layout="@layout/fragment_change_password" />
    <fragment
        android:id="@+id/nav_notification"
        android:name="com.avengers.enterpriseexpensetracker.ui.fragment.NotificationFragment"
        android:label="@string/action_notification"
        tools:layout="@layout/fragment_notification">
        <action
            android:id="@+id/action_nav_notification_to_nav_report_detail"
            app:destination="@id/nav_report_detail" />
    </fragment>
</navigation>