<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.avengers.enterpriseexpensetracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_reports">
        <action
            android:id="@+id/action_nav_home_to_nav_report_detail"
            app:destination="@id/nav_report_detail" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_expense"
        android:name="com.avengers.enterpriseexpensetracker.ui.add_expense.AddExpenseFragment"
        android:label="@string/menu_add_expense"
        tools:layout="@layout/fragment_add_expense" />
    <fragment
        android:id="@+id/nav_report_history"
        android:name="com.avengers.enterpriseexpensetracker.ui.reports_history.ReportsFragment"
        android:label="@string/menu_report_history"
        tools:layout="@layout/fragment_reports" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.avengers.enterpriseexpensetracker.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/nav_report_detail"
        android:name="com.avengers.enterpriseexpensetracker.ui.ReportDetailFragment"
        android:label="fragment_report_detail"
        tools:layout="@layout/fragment_report_detail">
        <argument
            android:name="report"
            app:argType="com.avengers.enterpriseexpensetracker.modal.ExpenseReport" />
    </fragment>
</navigation>