<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_large"
    android:paddingTop="@dimen/margin_large"
    android:paddingRight="@dimen/margin_large"
    android:paddingBottom="@dimen/margin_large"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/padding_8"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/navHeader"
        style="@style/HeaderTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_8"
        android:text="@string/nav_header_title" />

    <TextView
        android:id="@+id/navSubHeader"
        style="@style/SubHeaderTextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_3"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
