<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_submit_otp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_20"
    android:paddingTop="@dimen/padding_32"
    android:paddingEnd="@dimen/padding_20"
    android:visibility="gone"
    tools:visibility="visible">

    <TextView
        style="@style/EmptyTextDetailTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_20"
        android:gravity="center"
        android:text="@string/txt_otp_received_msg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_otp"
        style="@style/TextInputTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:hint="@string/txt_hint_otp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextDetailTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_new_password"
        style="@style/TextInputTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:hint="@string/txt_new_pwd"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextDetailTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_confirm_new_password"
        style="@style/TextInputTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:hint="@string/txt_confirm_new_pwd"
        app:endIconMode="password_toggle"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextDetailTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_submit_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/txt_submit"
        android:theme="@style/ButtonTheme" />
</androidx.appcompat.widget.LinearLayoutCompat>