<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lyt_send_otp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_email"
        style="@style/TextInputTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_20"
        android:hint="@string/txt_hint_email">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/EditTextDetailTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/email_max_length" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_20"
        android:text="@string/txt_submit"
        android:theme="@style/ButtonTheme" />

    <TextView
        style="@style/EmptyTextDetailTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_20"
        android:gravity="center"
        android:text="@string/txt_forgot_pwd_otp_msg" />
</androidx.appcompat.widget.LinearLayoutCompat>