<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_layout_bg">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_layout_bg"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_20"
        android:paddingTop="@dimen/padding_32"
        android:paddingEnd="@dimen/padding_20">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_old_password"
            style="@style/TextInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_old_pwd"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextDetailTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:inputType="textPassword"
                android:maxLength="@integer/password_max_length" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_new_password"
            style="@style/TextInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:hint="@string/txt_new_pwd"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextDetailTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:inputType="textPassword"
                android:maxLength="@integer/password_max_length" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_confirm_new_password"
            style="@style/TextInputTheme"
            android:layout_width="match_parent"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:hint="@string/txt_confirm_new_pwd"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextDetailTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:inputType="textPassword"
                android:maxLength="@integer/password_max_length" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_change_pwd_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/txt_submit"
            android:theme="@style/ButtonTheme" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.coordinatorlayout.widget.CoordinatorLayout>