<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_20">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/txt_app_title"
                    style="@style/AppTitleTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:text="@string/app_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_input_email"
                    style="@style/TextInputTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30"
                    android:hint="@string/txt_hint_email">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextDetailTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="@integer/email_max_length"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_input_password"
                    style="@style/TextInputTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5"
                    android:hint="@string/txt_password">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextDetailTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:maxLength="@integer/password_max_length"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:text="@string/txt_login"
                    android:theme="@style/ButtonTheme" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </LinearLayout>

    <include
        layout="@layout/app_progress"
        android:visibility="gone" />
</FrameLayout>